# zenith

./: .gitignore  .pre-commit-config.yaml  README.md  principles.md  pyproject.toml
.github/workflows/: deploy-docs.yml
_sources/: modules.rst.txt
docs/: conf.py  zenith.dataset.rst  zenith.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.dataset.doctree  src.doctree  zenith.dataset.doctree  zenith.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.dataset.html  src.html  zenith.dataset.html  zenith.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  src.dataset.rst.txt  src.rst.txt
docs/source/: conf.py  index.rst
src/: base.py  collection.py  root.py
src/dataset/: base.py  file_sys.py  record_table.py
src/zenith/: collection.py  example4.py  note.py
src/zenith/dataset/: base.py  budget.py  file_sys.py
test/: test_instantiation.py
