[project]
name = "zenith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "sphinx>=8.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.ruff]
select = ["I001", "I002", "E", "W"]
